--- a/assets/index.html
+++ b/assets/index.html
@@ -7,15 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width,  initial-scale=1">
         <link href='/css/mapbox-gl.css' rel='stylesheet' />
-        <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        #root {
-            height: 100%;
-        }
-        </style>
+        <link href='/css/base-styles.css' rel='stylesheet' />
     </head>
     <body>
         <div id="root"></div>
